tests/compile_fail/pipeline_edge_from_stage_non_pipeline_misuse.cpp
#include <pb/pipeline.hpp>

struct NotAPipeline {};

// Should fail with a public ValidPipeline constraint diagnostic for edge stage alias misuse.
using BadFromStage = pb::pipeline_edge_from_stage_t<NotAPipeline, 0>;

int main() { return 0; }
